# SuperKLF

./:  开发任务.txt  CMakeLists.txt  build-win.sh  build.sh  config.json  idea  mingw_toolchain.cmake  outline  priority.txt  readme.md  sourcecode.doc
doc/: raylibDrawChinese.typ
include/: Bullet.h  Collision.h  DataManager.h  Entity.h  EntityModifier.h  EventSystem.h  GameStage.h  GameStageFwd.h  Level.h  ResourceManager.h  RewardSystem.h  SpecialEffect.h  Tools.h  UI.h  UIComponent.h
include/Effect/: BulletEffect.h  EffectFactories.h  EffectManager.h  EffectRegistry.h  InstantEffect.h  InstantEffectFactory.h  RelicEffect.h  RelicEffectFactory.h
include/Event/: EventFWD.h  EventSystem.h
include/Level/: BattleLevel.h  DefeatLevel.h  EventLevel.h  Level.h  LevelManager.h  MainMenuLevel.h  ShopLevel.h  VictoryLevel.h
include/UI/: Button.h  Information.h  UI.h  UIUtility.h  UIwheel.h
include/UI/LevelUI/: BaseUI.h  BattleUI.h  DefeatUI.h  EventUI.h  MainMenuUI.h  ShopUI.h  VictoryUI.h
res/data/: Effects.json  Levels.json  Rewards.json  rewards.json
res/font/: preload.txt
src/: CMakeLists.txt  main.cpp
src/Collision/: CMakeLists.txt  Collision.cpp
src/Entity/: Bullet.cpp  CMakeLists.txt  Entity.cpp  EntityModifier.cpp
src/Level/: BattleLevel.cpp  CMakeLists.txt  DefeatLevel.cpp  EventLevel.cpp  Level.cpp  MainMenuLevel.cpp  ShopLevel.cpp  VictoryLevel.cpp
src/Managers/: CMakeLists.txt
src/Managers/Data/: CMakeLists.txt  DataManager.cpp
src/Managers/GameStage/: CMakeLists.txt  GameStage.cpp
src/Managers/Level/: CMakeLists.txt  Level.cpp  LevelManager.cpp
src/Managers/ResourceManager/: CMakeLists.txt  ResourceManager.cpp
src/ResourceManager/: CMakeLists.txt  ResourceManager.cpp
src/RewardSystem/: CMakeLists.txt  RewardSystem.cpp
src/SpecialEffect/: BulletEffect.cpp  CMakeLists.txt  EffectManager.cpp  InstantEffect.cpp  RelicEffect.cpp  SpecialEffect.cpp
src/Tools/: CMakeLists.txt  Tools.cpp
src/UI/: CMakeLists.txt  UI.cpp  UIUtility.cpp
src/UI/LevelUI/: BaseUI.cpp  BattleUI.cpp  CMakeLists.txt  DefeatUI.cpp  EventUI.cpp  MainMenuUI.cpp  ShopUI.cpp  VictoryUI.cpp
src/UI/UIComponent/: Button.cpp  CMakeLists.txt  Information.cpp  UIComponent.cpp  UIUtility.cpp  UIWheel.cpp
